[tool.poetry]
name = "stochastic-kmean"
version = "0.1.0"
description = ""
authors = ["Alex Patry <alex@nlpfu.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.6.0"
tensorflow-recommenders = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
ipython = "^7.28.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
